[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
bitflags = "2.6.0"
buddy_system_allocator = "0.11.0"
dtb-walker = "0.1.3"
log = "0.4"
r0 = "1.0.0"
riscv = "0.11.1"
sbi-rt = "0.0.3"
slab = { version = "0.4.9", default-features = false}
spin = "0.9.8"
uart16550 = "0.0.1"
virtio-drivers = "0.7.5"
[profile.release]
debug = true
